# rust-protobuf-pyo3-example

./: .gitignore  Cargo.toml  README.md  build.rs  main.py  setup.py
proto/function_a/v1/: function.proto
proto/function_b/v1/: function.proto
proto_example/: __init__.py
src/: lib.rs
